src/v7/CAPI_Lines.pas


    if ActiveCircuit <> NIL then
    begin      // Search list of Lines in active circuit for name
        with ActiveCircuit.Lines do
        begin
            S := Value;  // Convert to Pascal String
            Found := FALSE;
            ActiveSave := ActiveIndex;
            pLine := First;
            while pLine <> NIL do
            begin
                if (CompareText(pLine.Name, S) = 0) then
                begin
                    ActiveCircuit.ActiveCktElement := pLine;
                    Found := TRUE;
                    Break;
                end;
                pLine := Next;
            end;
            if not Found then
            begin
                DoSimpleMsg('Line "' + S + '" Not Found in Active Circuit.', 5008);
                pLine := Get(ActiveSave);    // Restore active Line
                ActiveCircuit.ActiveCktElement := pLine;
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Phases(Value: Integer); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Nphases := Value;
                YprimInvalid := TRUE;
            end;
        end;

end;
//------------------------------------------------------------------------------
procedure Lines_Set_R1(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                R1 := Value;
                SymComponentsChanged := TRUE;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_X1(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                X1 := Value;
                SymComponentsChanged := TRUE;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
function Lines_Get_C0(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Result := C0 / UnitsConvert * 1.0e9;
            end

end;
//------------------------------------------------------------------------------
function Lines_Get_C1(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Result := C1 / UnitsConvert * 1.0e9;
            end;

end;
//------------------------------------------------------------------------------
procedure Lines_Get_Cmatrix(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    i, j, k: Integer;
    Factor: Double;

begin

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Factor := TwoPi * BaseFrequency * 1.0e-9 * UnitsConvert;  // corrected 2.9.2018 RCD
                Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
                k := 0;
                for i := 1 to NPhases do
                    for j := 1 to Nphases do
                    begin
                        Result[k] := Yc.GetElement(i, j).im / Factor;
                        Inc(k);
                    end;
            end;
        end;

end;

procedure Lines_Get_Cmatrix_GR(); CDECL;
// Same as Lines_Get_Cmatrix but uses global result (GR) pointers
begin
    Lines_Get_Cmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Lines_Get_R0(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Result := R0 / UnitsConvert;
            end;

end;
//------------------------------------------------------------------------------
procedure Lines_Get_Rmatrix(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    i, j, k: Integer;

begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
                k := 0;
                for i := 1 to NPhases do
                    for j := 1 to Nphases do
                    begin
                        Result[k] := Z.GetElement(i, j).Re / UnitsConvert;
                        Inc(k);
                    end;
            end;
        end;
end;

procedure Lines_Get_Rmatrix_GR(); CDECL;
// Same as Lines_Get_Rmatrix but uses global result (GR) pointers
begin
    Lines_Get_Rmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Lines_Get_X0(): Double; CDECL;
begin

    Result := 0.0;

    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Result := X0 / UnitsConvert;
            end;

end;
//------------------------------------------------------------------------------
procedure Lines_Get_Xmatrix(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    i, j, k: Integer;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
                k := 0;
                for i := 1 to NPhases do
                    for j := 1 to Nphases do
                    begin
                        Result[k] := Z.GetElement(i, j).im / UnitsConvert;
                        Inc(k);
                    end;
            end;
        end;
end;

procedure Lines_Get_Xmatrix_GR(); CDECL;
// Same as Lines_Get_Xmatrix but uses global result (GR) pointers
begin
    Lines_Get_Xmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Lines_Set_C0(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                C0 := Value * 1.0e-9;
                SymComponentsChanged := TRUE;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_C1(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                C1 := Value * 1.0e-9;
                SymComponentsChanged := TRUE;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Cmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;
    i, j, k: Integer;
    Factor: Double;
begin
    Value := PDoubleArray(ValuePtr);
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Factor := TwoPi * BaseFrequency * 1.0e-9;
                k := (0);
                for i := 1 to NPhases do
                    for j := 1 to Nphases do
                    begin
                        Yc.SetElement(i, j, Cmplx(0.0, Value[k] * Factor));
                        Inc(k);
                    end;
                YprimInvalid := TRUE;
            end;
        end;

end;
//------------------------------------------------------------------------------
procedure Lines_Set_R0(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                R0 := Value;
                SymComponentsChanged := TRUE;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;
    i, j, k: Integer;
    Ztemp: complex;
begin
    Value := PDoubleArray(ValuePtr);
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                k := (0);
                for i := 1 to NPhases do
                    for j := 1 to Nphases do
                    begin
                        ZTemp := Z.GetElement(i, j);
                        Z.SetElement(i, j, Cmplx(Value[k], ZTemp.im));
                        Inc(k);
                    end;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_X0(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                X0 := Value;
                SymComponentsChanged := TRUE;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;
    i, j, k: Integer;
    Ztemp: complex;
begin
    Value := PDoubleArray(ValuePtr);
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                k := (0);
                for i := 1 to NPhases do
                    for j := 1 to Nphases do
                    begin
                        ZTemp := Z.GetElement(i, j);
                        Z.SetElement(i, j, Cmplx(Ztemp.re, Value[k]));
                        Inc(k);
                    end;
                YprimInvalid := TRUE;

            end;
        end;
end;
//------------------------------------------------------------------------------
function Lines_Get_EmergAmps(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).EmergAmps;
        end
